1. To recover package.json because it has a problem. 2. Add Order and Product Component # If I add new component, I must enforce to remove the dist folder. Or, I can not see what changes.

--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -27,6 +27,16 @@
                         <span class='glyphicon glyphicon-th-list'></span> Fetch data
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/order']">
+                        <span class='glyphicon glyphicon-th-list'></span> Order
+                    </a>
+                </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/product']">
+                        <span class='glyphicon glyphicon-th-list'></span> Product
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
