--- a/ClientApp/app/components/order/order.component.html
+++ b/ClientApp/app/components/order/order.component.html
@@ -1,3 +1,35 @@
-<p>
-  order works!
-</p>
+<h1>Order</h1>
+<form [formGroup]="orderForm">
+  <div class="form-group">
+    <label for="product">Product</label>
+    <select id="product" class="form-control" formControlName="product">
+      <option value="1">Product 1</option>
+      <option value="2">Prodcut 2</option>
+    </select>
+  </div>
+
+  <div class="form-group">
+    <label for="quantity">Quantity</label>
+    <input class="form-control" id="quantity" type="number" formControlName="quantity">
+  </div>
+
+  <div class="form-group">
+      <button class="btn btn-primary" (click)="add()">Add</button>
+      <button class="btn btn-primary" (click)="save()">Save</button>
+  </div>
+</form>
+
+<br/>
+<br/>
+
+<h1>Ordered Items</h1>
+<table class="table">
+  <tr>
+    <th>Product</th>
+    <th>Quantity</th>
+  </tr>
+  <tr *ngFor="let m of orderItemList">
+    <td>{{m.product}}</td>
+    <td>{{m.quantity}}</td>
+  </tr>
+</table>
