--- a/ClientApp/app/components/product/product.component.html
+++ b/ClientApp/app/components/product/product.component.html
@@ -1,3 +1,20 @@
-<p>
-  product works!
-</p>
+<form [fromGroup]="productForm">
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input id="name" class="form-control" type="text" formControlName="name">
+  </div>
+
+  <div class="form-group">
+    <label for="category">Category</label>
+    <input id="category" class="form-control" type="text" formControlName="category">
+  </div>
+
+  <div class="form-group">
+    <label for="price">Price</label>
+    <input id="price" class="form-control" type="number" formControlName="price">
+  </div>
+
+  <div class="form-group">
+    <button class="btn btn-primary" (click)="add()">Add</button>
+  </div>
+</form>
