--- a/ClientApp/app/components/product/product.component.html
+++ b/ClientApp/app/components/product/product.component.html
@@ -15,3 +15,20 @@
         <button class="btn btn-primary" (click)="add()">Add</button>
     </div>
 </form>
+
+<br />
+<br />
+<h1> Products </h1>
+<table class='table'>
+    <tr>
+        <th>Product</th>
+        <th>Category</th>
+        <th>Price</th>
+    </tr>
+
+    <tr *ngFor="let m of products">
+        <td>{{m.name}}</td>
+        <td>{{m.category}}</td>
+        <td>{{m.price}}</td>
+    </tr>
+</table>
