add report componet

--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -22,6 +22,12 @@
                         <span class='glyphicon glyphicon-th-list'></span> Product
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/report']">
+                        <span class='glyphicon glyphicon-th-list'></span> Report
+                    </a>
+                </li>
+
             </ul>
         </div>
     </div>
